--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -16,6 +17,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "vite-tsconfig-paths": "^4.0.5",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
